--- a/index.css
+++ b/index.css
@@ -1,28 +1,14 @@
 body {
-    padding: 20px;
-    background-color: #eeeeee;
+    background-color: #80bfff;
 }
-h1 {
-    text-align: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    background-color: #98dad3;
-    color: #305d7d
+
+h1{
+    text-align: left;
+    color: black;
 }
+
 p{
     text-align: center;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    color: #305d7d
-}
-#general{
-    text-align: center;
-}
-.links{
-    padding: 20px 30px;
-    text-align: center;
-    font-family: 'Courier New', Courier, monospace;
-    background-color: #ffa366;
-}
-.extra{
-    width: 378px;
-    height: 252px;
+    color: black;
+    font-size: large;
 }
