--- a/public/index.css
+++ b/public/index.css
@@ -6,6 +6,11 @@ h1{
     text-align: center;
     color: #3D0814;
 }
+img {
+    width: 100%;
+    max-width: 100%;
+    height: auto;
+}
 .center{
     display: flex;
     text-align: center;
