--- a/public/index.css
+++ b/public/index.css
@@ -6,10 +6,13 @@ h1{
     text-align: center;
     color: #3D0814;
 }
-img {
+#coffeeImg{
+    max-width: 700px;
+    max-height: 700px; 
     width: 100%;
-    max-width: 100%;
-    height: auto;
+    height: 100%;
+    margin: auto;
+
 }
 .center{
     display: flex;
@@ -20,8 +23,8 @@ img {
     display: block;
     float: left;
 }
-.text{
-    text-align: flex;
+.right{
+    text-align: right;
     color: #3D0814;
     font-size: large;
 }
