--- a/public/index.css
+++ b/public/index.css
@@ -13,11 +13,11 @@ h1{
     padding-left: 2em;
     padding-bottom: 2em;
 }
-.center{
-    display: flex;
-    text-align: center;
-    align-items: center;
+#coffee{
+    width: 664px;
+    height: 200px;
 }
+
 .left{
     display: block;
     float: left;
